--- a/css/scratch.css
+++ b/css/scratch.css
@@ -57,14 +57,6 @@ pre.language-scratch {
     border-radius: 0;
 }
 
-:not(pre) > code.language-scratch {
-    background: none;
-    border: none;
-    padding: 0 0 0.5rem;
-    margin: 0 0.6rem;
-}
-
-
 pre.language-scratch,
 code.language-scratch,
 :not(pre) > code.language-scratch {
@@ -72,6 +64,16 @@ code.language-scratch,
     font-family: sans-serif;
     font-weight: bold;
     font-size: 0.9rem;
+}
+
+:not(pre) > code.language-scratch {
+    background: none;
+    border: none;
+    padding: 0 0 0.4rem;
+    margin: 0 0.5rem;
+    line-height: 1.1;
+    vertical-align: bottom;
+    font-size: 0.8rem;
 }
 
 
@@ -360,6 +362,11 @@ code.language-scratch .block header {
     gap: 0.5em;
     align-items: center;
 }
+
+:not(pre) > code.language-scratch .block {
+    padding: 0.3em 0.5em;
+}
+
 
 /*** CONTAINER BLOCKS **********************************************************/
 
