--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 :root {
     --accent:         #81d4fa;
     --accent-low:     #5e8497;
+    --accent-trans:   #81d4fa40;
 
     --tone-very-light: #eceff1;
     --tone-light:      #78909c;
@@ -14,9 +15,10 @@
     --shadow:       0  0.25rem 0.5rem #0008;
     --shadow-small: 0   0.1rem 0.2rem #0008;
     --shadow-high:  0 -0.25rem 0.5rem #0008;
-    --shadow-low:   0   0.5rem 0.5rem #0008;
+    --shadow-low:   0   0.5rem 0.5rem #0005;
 
     --overlay:      #0008;
+    --overlay-low:  #0005;
 
     --correct:      #4caf50;
     --wrong:        #f44336;
@@ -59,6 +61,7 @@ em, strong {
 strong {
     font-weight: 500;
 }
+
 
 /*** LINKS *******************************************************/
 
@@ -135,7 +138,7 @@ a.button.low:hover {
 }
 
 #overview-link:hover {
-    color: var(--tone-very-light);
+    text-decoration: underline;
 }
 
 
@@ -163,6 +166,8 @@ a.button.low:hover {
     flex-direction: column;
     gap: 1rem;
     z-index: 999;
+    overflow-y: auto;
+    list-style: none;
 }
 
 #main-nav-links #overlay {
@@ -180,7 +185,7 @@ a.button.low:hover {
 }
 
 .main-nav-section ul li {
-    padding-top: 0.5em;
+    padding-top: 0.2em;
 }
 
 #main-nav a {
@@ -197,6 +202,15 @@ a.button.low:hover {
 }
 
 @media screen and (min-width: 80rem) {
+    #overview-link {
+        color: var(--tone-very-light);
+    }
+
+    #overview-link:hover {
+        color: var(--accent);
+        text-decoration: none;
+    }
+
     #main-nav-links #overlay {
         display: none;
     }
@@ -215,6 +229,7 @@ a.button.low:hover {
         font-size: 1.2rem;
         background: none;
         box-shadow: none;
+        overflow-y: unset;
     }
 
     .main-nav-section {
@@ -231,9 +246,9 @@ a.button.low:hover {
 
     .main-nav-section ul {
         position: absolute;
-        right: 0;
+        right: -1rem;
         top: 1.75rem;
-        display: none;
+        display: flex;
         flex-direction: column;
         gap: 1rem;
         background-color: var(--tone-mid);
@@ -241,7 +256,11 @@ a.button.low:hover {
         box-shadow: var(--shadow-low);
         min-width: 100%;
         width: fit-content;
-        padding: 1rem;
+        list-style: none;
+        padding: 0 1rem;
+        max-height: 0;
+        overflow-y: hidden;
+        transition: all 70ms;
     }
 
     .main-nav-section:hover {
@@ -254,6 +273,8 @@ a.button.low:hover {
 
     .main-nav-section:hover ul {
         display: flex;
+        padding: 1.5rem 1rem 1rem;
+        max-height: 20rem;
     }
 
     .main-nav-section ul li {
@@ -291,12 +312,25 @@ main {
     justify-content: flex-start;
 }
 
-main > h1 {
+main h1 {
     font-size: min(4rem, 10vw);
     margin: 0 2.5rem 2rem;
     text-align: center;
     color: var(--accent);
     text-shadow: 0.01em 0.03em 0 var(--tone-very-dark);
+}
+
+main h2 {
+    font-size: 2.2rem;
+    color: var(--accent);
+    margin-bottom: 1rem;
+}
+
+main h3 {
+    font-size: 1.8rem;
+    color: var(--tone-light);
+    margin-bottom: 1rem;
+    margin-top: 0.3rem;
 }
 
 main > p {
@@ -305,7 +339,7 @@ main > p {
 }
 
 main p:not(:last-child) {
-    margin-bottom: 0.75rem;
+    margin-bottom: 0.8rem;
 }
 
 main :is(ol,ul) + p {
@@ -326,6 +360,11 @@ main li {
     margin: 0.5rem 0;
 }
 
+main :is(ol,ul) > li {
+    margin-bottom: 0.8rem;
+}
+
+
 
 /*** STRUCTURE *******************************************************/
 
@@ -336,7 +375,7 @@ main li {
 #quiz.hide,
 #info.hide,
 #overview.hide {
-        display: none;
+    display: none;
 }
 
 #quiz.show,
@@ -345,11 +384,13 @@ main li {
     display: block;
 }
 
+
 /*** OVERVIEW *******************************************************/
 
 #overview h2 {
-    color: var(--accent);
+    font-size: 1.8rem;
 }
+
 
 .overview-list {
     list-style: none;
@@ -447,8 +488,8 @@ main li {
     text-align: right;
 }
 
-/*** STARS *******************************************************/
 
+/*** STARS *******************************************************/
 
 .stars {
     display: flex;
@@ -539,7 +580,7 @@ main li {
     background-color: var(--tone-very-dark);
     position: fixed;
     top: 5.8rem;
-    z-index: 99;
+    z-index: 9;
 }
 
 #prev-question {
@@ -611,19 +652,16 @@ main li {
 
 
 
-/*** QUESTIONS *******************************************************/
+/*** QUESTIONS & ANSWERS *******************************************************/
 
 #question-container {
     width: 100%;
     max-width: 80rem;
     margin: min(10vw, 10vh) auto 0;
-    /* display: grid; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 2rem max(5rem, 5%);
-    /* grid-template-columns: 1fr;
-    grid-template-rows: auto; */
 }
 
 #question-container > * {
@@ -632,7 +670,6 @@ main li {
 
 @media screen and (min-width: 60rem) {
     #question-container {
-        /* grid-template-columns: 2fr 2fr; */
         flex-direction: row;
         justify-content: center;
         align-items: flex-start;
@@ -645,19 +682,6 @@ main li {
     }
 }
 
-#question-container h2 {
-    font-size: 2.2rem;
-    color: var(--accent);
-    margin-bottom: 1rem;
-}
-
-#question-container h3 {
-    font-size: 1.8rem;
-    color: var(--tone-light);
-    margin-bottom: 1rem;
-    margin-top: 0.3rem;
-}
-
 
 #answers > ol {
     display: flex;
@@ -665,14 +689,9 @@ main li {
     gap: 0.5rem;
     padding: 0;
     list-style: none;
-    /* counter-reset: ansNum; */
 }
 
-#answers > ol li {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-    justify-content: flex-start;
+#answers > ol > li {
     background-color: var(--accent);
     color: var(--tone-very-dark);
     padding: 0.75rem 1.5rem 0.75rem 1rem;
@@ -682,38 +701,65 @@ main li {
     transition: all 100ms;
 }
 
-/* #answers > ol li::before {
-    counter-increment: ansNum;
-    content: counter(ansNum);
-    color: var(--tone-light);
-    font-size: 1.3em;
-    line-height: 1.3;
-    margin: 0;
-} */
-
-#answers > ol li:not(:is(.correct,.wrong)):hover {
-    /* transform: translateX(0.5rem); */
+#answers > ol > li:not(:is(.correct,.wrong)):hover {
     transform: scale(1.02);
     background-color: var(--tone-very-light);
     box-shadow: var(--shadow-small);
 }
 
+
+/*** CODE BLOCKS *******************************************************/
+
 pre[class*=language-],
-:not(pre)>code[class*=language-] {
+:not(pre) > code[class*=language-] {
     background: var(--tone-very-dark);
     color: var(--tone-very-light);
     font-family: Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;
     text-align: left;
-    white-space: pre;
+    /* white-space: pre; */
     tab-size: 4;
     border: 2px solid var(--tone-mid);
     border-radius: 0.3rem;
     padding: 0.5rem 1rem;
 }
 
-:not(pre)>code[class*=language-] {
+:not(pre) > code[class*=language-] {
     display: inline-block;
     padding: 0 0.3rem;
+    margin: 0.2rem 0.3rem;
+}
+
+code[class*=language-], pre[class*=language-] {
+    line-height: 1.3;
+}
+
+.line-highlight {
+    left: 0.5rem;
+    right: 0.5rem;
+    width: auto !important;
+    margin-top: 0.4em;
+    background: none;
+    /* background-color: var(--accent-trans); */
+    outline: 2px dashed var(--accent);
+    box-shadow: 0 0 0  100rem var(--overlay-low),
+                0 0 0 -100rem var(--overlay-low),
+                0 0 0.8rem var(--overlay);
+    /* border-radius: 0.3rem; */
+}
+
+pre[class*=language-].line-numbers {
+    padding-left: 3em;
+}
+
+.line-numbers .line-numbers-rows {
+    border-right-color: var(--tone-mid);
+    left: -3em;
+    width: 2.2em;
+}
+
+.line-numbers-rows > span:before {
+    color: var(--tone-mid);
+    padding-right: 0.5em
 }
 
 
