--- a/css/styles.css
+++ b/css/styles.css
@@ -796,38 +796,47 @@ pre[class*=language-].line-numbers {
     min-width: 20rem;
     max-width: 45rem;
     margin: 0 auto;
+    transform-origin: 50% 300%;
 }
 
-#feedback.hide { 
-    bottom: -20rem; 
+#feedback.show         { animation:  250ms ease slide-up; }
+#feedback.correct.show { animation: 1000ms ease slide-up-and-bounce; }
+#feedback.wrong.show   { animation: 1000ms ease slide-up-and-shake; }
+#feedback.hide         { animation:  250ms ease slide-down; bottom: -20rem; }
+
+
+@keyframes slide-up {
+    0% { bottom: -20rem; }
+  100% { bottom: -1rem; }
 }
 
-#feedback.show { 
-    animation: 750ms ease slide-up-and-bounce;
-}
-
-#feedback.wrong.show { 
-    animation: 1000ms ease slide-up-and-shake;
+@keyframes slide-down {
+    0% { bottom: -1rem; }
+  100% { bottom: -20rem; }
 }
 
 @keyframes slide-up-and-bounce {
     0% { bottom: -20rem; }
-   40% { bottom: -0.5rem; }
-   60% { bottom: -1.5rem; }
-   80% { bottom: -0.75rem; }
-  100% { bottom: -1rem; }
+   20% { bottom: -1.0rem; }
+   40% { bottom: -1.5rem; }
+   50% { bottom: -1.5rem; }
+   60% { bottom: -1.0rem; }
+   70% { bottom: -2.0rem; }
+   80% { bottom: -1.0rem; }
+   90% { bottom: -2.0rem; }
+  100% { bottom: -1.0rem; }
 }
 
 @keyframes slide-up-and-shake {
     0% { bottom: -20rem; }
    20% { bottom: -0.5rem; }
    40% { bottom: -1rem; }
-   50% { bottom: -1rem; transform: translatex(0); }
-   60% { bottom: -1rem; transform: translatex(-1rem); }
-   70% { bottom: -1rem; transform: translatex(1rem); }
-   80% { bottom: -1rem; transform: translatex(-1rem); }
-   90% { bottom: -1rem; transform: translatex(1rem); }
-  100% { bottom: -1rem; transform: translatex(0); }
+   50% { bottom: -1rem; transform: rotate( 0deg); }
+   60% { bottom: -1rem; transform: rotate(-2deg); }
+   70% { bottom: -1rem; transform: rotate( 2deg); }
+   80% { bottom: -1rem; transform: rotate(-2deg); }
+   90% { bottom: -1rem; transform: rotate( 2deg); }
+  100% { bottom: -1rem; transform: rotate( 0deg); }
 }
 
 #correct,
