--- a/css/styles.css
+++ b/css/styles.css
@@ -304,12 +304,13 @@ a.button.low:hover {
 
 main {
     padding: 2.5rem max(3vw, 1rem);
-    min-height: calc(100vh - 9rem);
+    min-height: calc(100vh + 9rem);
     display: flex;
     flex-direction: column;
     gap: 1rem;
     align-items: center;
     justify-content: flex-start;
+    padding-bottom: 40vh;
 }
 
 main h1 {
@@ -552,10 +553,10 @@ main :is(ol,ul) > li {
     padding: 0;
     align-items: center;
     background-image: linear-gradient(
-        #0000 47%,
-        var(--accent-low) 47%,
-        var(--accent-low) 53%,
-        #0000 53%
+        #0000 43%,
+        var(--accent-low) 43%,
+        var(--accent-low) 49%,
+        #0000 49%
     );
 }
 
@@ -581,32 +582,44 @@ main :is(ol,ul) > li {
     position: fixed;
     top: 5.8rem;
     z-index: 9;
+    height: 3em;
 }
 
 #prev-question {
-    left: 0.75rem;
+    left: 0;
+    border-radius: 0 1em 1em 0;
 }
 
 #next-question {
-    right: 0.75rem;
+    right: 0;
+    border-radius: 1em 0 0 1em;
 }
 
 #next-question.highlight {
-    animation-name: shimmy;
-    animation-duration: 250ms;
-    animation-delay: 1000ms;
-    animation-iteration-count: 3;
+    animation: 3000ms ease shimmy;
     background-color: var(--accent);
 }
 
 #next-question.highlight img {
+    animation: 3000ms ease inversion;
     filter: invert();
 }
 
 @keyframes shimmy {
-    0% { transform: translateX(0); }
-   50% { transform: translateX(0.5rem); }
-  100% { transform: translateX(0); }
+    0% { transform: translateX(0); background-color: var(--tone-very-dark); }
+   76% { transform: translateX(0); background-color: var(--tone-very-dark); }
+   80% { transform: translateX(0.5rem); }
+   84% { transform: translateX(0); }
+   88% { transform: translateX(0.5rem); }
+   92% { transform: translateX(0); }
+   96% { transform: translateX(0.5rem); }
+  100% { transform: translateX(0); background-color: var(--accent); }
+}
+
+@keyframes inversion {
+    0% { filter: none; }
+   76% { filter: none; }
+   80% { filter: invert(); }
 }
 
 #question-markers li {
@@ -620,6 +633,29 @@ main :is(ol,ul) > li {
 
 #question-markers li.start { margin-right: 2rem; }
 #question-markers li.end   { margin-left:  2rem; }
+
+#question-markers li.start::before,
+#question-markers li.end::before {
+    content: '';
+    position: absolute;
+    width: 2.1rem;
+    height: 1rem;
+    top: calc(50% - 0.5rem);
+    background-image: linear-gradient(
+        90deg,
+        var(--tone-dark) 20%,
+        #0000 20%,
+        #0000 40%,
+        var(--tone-dark) 40%,
+        var(--tone-dark) 60%,
+        #0000 60%,
+        #0000 80%,
+        var(--tone-dark) 80%
+    );
+}
+
+#question-markers li.start::before { right: -2.7rem; }
+#question-markers li.end::before   { left: -2.7rem; }
 
 #question-markers li.current {
     background-color: var(--tone-very-light);
@@ -648,16 +684,15 @@ main :is(ol,ul) > li {
     }
 
     #question-markers {
-        /* order: unset; */
         gap: 1.2em;
     }
 
     #prev-question,
     #next-question {
-        /* order: unset; */
-        /* margin: 0; */
         position: static;
         z-index: unset;
+        border-radius: 10rem;
+        height: 2em;
     }
 
     #question-markers li {
@@ -666,6 +701,9 @@ main :is(ol,ul) > li {
 
     #question-markers li.start { margin-right: 0; }
     #question-markers li.end   { margin-left:  0; }
+
+    #question-markers li.start::before { display: none; }
+    #question-markers li.end::before   { display: none; }
 }
 
 
@@ -734,7 +772,6 @@ pre[class*=language-],
     color: var(--tone-very-light);
     font-family: Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;
     text-align: left;
-    /* white-space: pre; */
     tab-size: 4;
     border: 2px solid var(--tone-mid);
     border-radius: 0.3rem;
@@ -757,12 +794,10 @@ code[class*=language-], pre[class*=language-] {
     width: auto !important;
     margin-top: 0.4em;
     background: none;
-    /* background-color: var(--accent-trans); */
     outline: 2px dashed var(--accent);
     box-shadow: 0 0 0  100rem var(--overlay-low),
                 0 0 0 -100rem var(--overlay-low),
                 0 0 0.8rem var(--overlay);
-    /* border-radius: 0.3rem; */
 }
 
 pre[class*=language-].line-numbers {
@@ -800,7 +835,7 @@ pre[class*=language-].line-numbers {
 }
 
 #feedback.show         { animation:  250ms ease slide-up; }
-#feedback.correct.show { animation: 1000ms ease slide-up-and-bounce; }
+#feedback.correct.show { animation:  500ms ease slide-up-and-bounce; }
 #feedback.wrong.show   { animation: 1000ms ease slide-up-and-shake; }
 #feedback.hide         { animation:  250ms ease slide-down; bottom: -20rem; }
 
@@ -817,13 +852,8 @@ pre[class*=language-].line-numbers {
 
 @keyframes slide-up-and-bounce {
     0% { bottom: -20rem; }
-   20% { bottom: -1.0rem; }
-   40% { bottom: -1.5rem; }
-   50% { bottom: -1.5rem; }
-   60% { bottom: -1.0rem; }
-   70% { bottom: -2.0rem; }
-   80% { bottom: -1.0rem; }
-   90% { bottom: -2.0rem; }
+   50% { bottom: -0.75rem; }
+   80% { bottom: -2rem; }
   100% { bottom: -1.0rem; }
 }
 
@@ -865,10 +895,10 @@ pre[class*=language-].line-numbers {
 
 #feedback.correct #correct::after,
 #feedback.wrong   #wrong::after {
-    content: ''; 
+    content: '';
     width: min(3rem, 8vw);
     height: min(3rem, 8vw);
-    background-size: cover; 
+    background-size: cover;
 }
 
 #feedback.correct #correct::after { background-image: url('../images/correct.svg'); }
