--- a/css/styles.css
+++ b/css/styles.css
@@ -518,20 +518,37 @@ main :is(ol,ul) > li {
 .stars       .star::before { content: url( '../images/star-empty.svg' ); }
 .stars.small .star::before { content: url( '../images/star-empty-small.svg' ); }
 
-.stars:is(.has1, .has2, .has3, .has4) .star:nth-child(1):before,
-.stars:is(.has2, .has3, .has4)        .star:nth-child(2):before,
-.stars:is(.has3, .has4)               .star:nth-child(3):before,
-.stars:is(.has4)                      .star:nth-child(4):before {
+.stars:is(.has1, .has2, .has3, .has4) .star:nth-child(1)::before,
+.stars:is(.has2, .has3, .has4)        .star:nth-child(2)::before,
+.stars:is(.has3, .has4)               .star:nth-child(3)::before,
+.stars:is(.has4)                      .star:nth-child(4)::before {
     content: url( '../images/star.svg' );
 }
 
-.stars.small:is(.has1, .has2, .has3, .has4) .star:nth-child(1):before,
-.stars.small:is(.has2, .has3, .has4)        .star:nth-child(2):before,
-.stars.small:is(.has3, .has4)               .star:nth-child(3):before,
-.stars.small:is(.has4)                      .star:nth-child(4):before {
+.stars.small:is(.has1, .has2, .has3, .has4) .star:nth-child(1)::before,
+.stars.small:is(.has2, .has3, .has4)        .star:nth-child(2)::before,
+.stars.small:is(.has3, .has4)               .star:nth-child(3)::before,
+.stars.small:is(.has4)                      .star:nth-child(4)::before {
     content: url( '../images/star-small.svg' );
 }
 
+.stars:is(.has1, .has2, .has3, .has4) .star:nth-child(1),
+.stars:is(.has2, .has3, .has4)        .star:nth-child(2),
+.stars:is(.has3, .has4)               .star:nth-child(3),
+.stars:is(.has4)                      .star:nth-child(4) {
+    animation: pop 250ms;
+}
+
+.stars:is(.has1, .has2, .has3, .has4) .star:nth-child(1) { animation-delay: 00ms; }
+.stars:is(.has2, .has3, .has4)        .star:nth-child(2) { animation-delay: 50ms; }
+.stars:is(.has3, .has4)               .star:nth-child(3) { animation-delay: 100ms; }
+.stars:is(.has4)                      .star:nth-child(4) { animation-delay: 150ms; }
+
+@keyframes pop {
+    0% { transform: scale( 1.0 ); }
+   50% { transform: scale( 1.5 ); }
+  100% { transform: scale( 1.0 ); }
+}
 
 
 /*** PROGRESS BAR *******************************************************/
@@ -662,6 +679,14 @@ main :is(ol,ul) > li {
     color: var(--tone-very-dark);
     cursor: default;
     pointer-events: none;
+    animation: popout 250ms;
+    transform: scale( 1.2 );
+}
+
+@keyframes popout {
+    0% { transform: scale( 1.0 ); }
+   50% { transform: scale( 1.3 ); }
+  100% { transform: scale( 1.2 ); }
 }
 
 #prev-question:hover,
